--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
 
   <main>
     <section class="home-intro">
+      
       <div class="intro-text">
-        <h2>Hello, I’m Varun 👋</h2>
-        <p>
-          I am a B.Tech Computer Science student at AJ Institute of Engineering & Technology, Mangalore. 
-          Passionate about coding, web technologies, and railfanning 🚆.
-        </p>
-        <p>
-          Explore my resume for my professional and academic background, or view my bio-data for more personal details.
-        </p>
-        <div class="btn-group">
-          <a href="resume.html" class="btn">View Resume</a>
-          <a href="biodata.html" class="btn">View Bio-data</a>
-        </div>
-      </div>
+  <h2>Hello<br> I’m Varun Kumar S </h2>
+  <p>
+    I am a BE Computer Science student at AJ Institute of Engineering & Technology, Mangalore, specializing in modern web and software development. I am passionate about coding, creating digital solutions, and leveraging technology to solve real-world problems.
+  </p>
+  <p>
+    I possess a foundational skill set in C/C++, Python, Java, and practical expertise in web Development: HTML, CSS3, JavaScript/jQuery, and MySQL for database management. I am committed to continuous learning and building scalable, impactful digital solutions, showcased in projects like <strong><a href="https://varun987-a11.github.io/Cosmic-Canvas">CosmiCanvas</a> </strong>
+  </p>
+  <p>
+    Explore my <strong>Resume</strong> for a detailed look at my technical skills, projects, and academic background, or view my <strong>Bio-data</strong> for formal personal and educational details.
+  </p>
+  <div class="btn-group">
+    <a href="resume.html" class="btn">View Resume</a>
+    <a href="biodata.html" class="btn">View Bio-data</a>
+  </div>
+</div>
       <div class="intro-photo">
         <img src="profile.png" alt="Varun's profile photo" class="img-animated"> 
       </div>
