--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     I am a BE Computer Science student at AJ Institute of Engineering & Technology, Mangalore, specializing in modern web and software development. I am passionate about coding, creating digital solutions, and leveraging technology to solve real-world problems.
   </p>
   <p>
-    I possess a foundational skill set in C/C++, Python, Java, and practical expertise in web Development: HTML, CSS3, JavaScript/jQuery, and MySQL for database management. I am committed to continuous learning and building scalable, impactful digital solutions, showcased in projects like <strong><a href="https://varun987-a11.github.io/Cosmic-Canvas">CosmiCanvas</a> </strong>
+    I possess a foundational skill set in C/C++, Python, Java, and practical expertise in web Development: HTML, CSS3, JavaScript/jQuery, and MySQL for database management. I am committed to continuous learning and building scalable, impactful digital solutions, showcased in projects like <strong><a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank">CosmiCanvas</a> </strong>
   </p>
   <p>
     Explore my <strong>Resume</strong> for a detailed look at my technical skills, projects, and academic background, or view my <strong>Bio-data</strong> for formal personal and educational details.
