--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
       <h2>Contact & Profile</h2>
       <p><strong>Email:</strong> <a href="mailto:varunkumarkodical@gmail.com">varunkumarkodical@gmail.com</a></p>
       <p><strong><a href="https://www.linkedin.com/in/varun-kumar-s-294b70341/" target="_blank">LinkedIn</a></strong> </p>
-      <p><strong><a href="https://github.com/Varun987-a11">GitHub</a></strong> </p>
+      <p><strong><a href="https://github.com/Varun987-a11"target="_blank">GitHub</a></strong> </p>
     </section>
 
     <section>
@@ -52,9 +52,10 @@
     <section>
       <h2>Projects</h2>
       <ul>
-        <li><strong>CosmiCanvas:</strong> A single-page infographic exploring the nature of reality from scientific and philosophical perspectives <a href="https://varun987-a11.github.io/Cosmic-Canvas">Click To View</a></li>
-        <li><strong>DisasterLink:</strong> Emergency Help & Resource Locator</li>
+        <li><strong>CosmiCanvas:</strong> A single-page infographic exploring the nature of reality from scientific and philosophical perspectives <a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank">Click To View</a></li>
         <li><strong>Noisescope:</strong> Crowdsourced Noise Mapping Application</li>
+        <li><strong>DoctorAppointmentScheduler:</strong> A DBMS-based PHP web app for booking doctor appointments</li>
+        <li><strong>DisasterLink:</strong> Emergency Help & Resource Locator</li>
         <li><strong>Canteenly:</strong> Smart Web-Based Canteen Food Ordering System</li>
       </ul>
     </section>
