--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
       <h2>Projects</h2>
       <ul>
         <li><strong>CosmiCanvas:</strong> A single-page infographic exploring the nature of reality from scientific and philosophical perspectives <a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank">Click To View</a></li>
-        <li><strong>Noisescope:</strong> Crowdsourced Noise Mapping Application</li>
+        <li><strong>Noisescope:</strong> Crowdsourced Noise Mapping Application <i>(in progress)</i></li>
         <li><strong>DoctorAppointmentScheduler:</strong> A DBMS-based PHP web app for booking doctor appointments</li>
         <li><strong>DisasterLink:</strong> Emergency Help & Resource Locator</li>
         <li><strong>Canteenly:</strong> Smart Web-Based Canteen Food Ordering System</li>
