--- a/resume.html
+++ b/resume.html
@@ -52,12 +52,39 @@
     <section>
       <h2>Projects</h2>
       <ul>
-        <li><strong>CosmiCanvas:</strong> A single-page infographic exploring the nature of reality from scientific and philosophical perspectives <a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank">Click To View</a></li>
-        <li><strong>Noisescope:</strong> Crowdsourced Noise Mapping Application <i>(in progress)</i></li>
-        <li><strong>DoctorAppointmentScheduler:</strong> A DBMS-based PHP web app for booking doctor appointments</li>
-        <li><strong>DisasterLink:</strong> Emergency Help & Resource Locator</li>
-        <li><strong>Canteenly:</strong> Smart Web-Based Canteen Food Ordering System</li>
-      </ul>
+  <li>
+    <strong>CosmiCanvas:</strong> 
+    A single-page infographic exploring the nature of reality from scientific and philosophical perspectives &nbsp;
+ |
+    <a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank">Click to View</a> |
+    <a href="https://github.com/Varun987-a11/Cosmic-Canvas" target="_blank">GitHub Repo</a>
+  </li>
+
+  <li>
+    <strong>Noisescope:</strong> 
+    Crowdsourced Noise Mapping Application <i>(in progress)</i> |
+    <a href="https://github.com/Varun987-a11/Noisescope" target="_blank">GitHub Repo</a>
+  </li>
+
+  <li>
+    <strong>DoctorAppointmentScheduler:</strong> 
+    A DBMS-based PHP web app for booking doctor appointments |
+    <a href="https://github.com/Varun987-a11/DoctorAppointmentScheduler" target="_blank">GitHub Repo</a>
+  </li>
+
+  <li>
+    <strong>DisasterLink:</strong> 
+    Emergency Help & Resource Locator |
+    <a href="https://github.com/Varun987-a11/DisasterLink" target="_blank">GitHub Repo</a>
+  </li>
+
+  <li>
+    <strong>Canteenly:</strong> 
+    Smart Web-Based Canteen Food Ordering System <i>(in progress)</i> |
+    <a href="https://github.com/Varun987-a11/Canteenly" target="_blank">GitHub Repo</a>
+  </li>
+</ul>
+
     </section>
 
     <section>
