Reorganized project directory and added new files

--- a/resume.html
+++ b/resume.html
@@ -50,42 +50,74 @@
     </section>
     
     <section>
-      <h2>Projects</h2>
-      <ul>
-  <li>
-    <strong>CosmiCanvas:</strong> 
-    A single-page infographic exploring the nature of reality from scientific and philosophical perspectives &nbsp;
- |
-    <a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank">Click to View</a> |
-    <a href="https://github.com/Varun987-a11/Cosmic-Canvas" target="_blank">GitHub Repo</a>
-  </li>
+    <h2>Projects 🛠️</h2>
+    <ul class="project-list">
+        
+        <li class="project-item">
+            <div class="project-header">
+                <bold>CosmiCanvas:</bold> 
+                <span class="project-desc">A single-page infographic exploring the nature of reality from scientific and philosophical perspectives. <strong>This project utilizes modern CSS layouts and interactive elements to present complex theoretical concepts in an accessible, visually engaging format.</strong></span>
+            </div>
+            <div class="project-links">
+                <a href="https://varun987-a11.github.io/Cosmic-Canvas" target="_blank" class="link-view">Click to View</a>
+                <a href="https://github.com/Varun987-a11/Cosmic-Canvas" target="_blank" class="link-repo">GitHub Repo</a>
+            </div>
+        </li>
 
-  <li>
-    <strong>Noisescope:</strong> 
-    Crowdsourced Noise Mapping Application <i>(in progress)</i> |
-    <a href="https://github.com/Varun987-a11/Noisescope" target="_blank">GitHub Repo</a>
-  </li>
+        <li class="project-item">
+            <div class="project-header">
+                <bold>VedicWisdom:</bold> 
+                <span class="project-desc">A resource hub for translating and explaining complex Vedic philosophical texts and concepts. <strong>Developed to improve understanding of ancient scriptures, it features categorized content and a search function for easy navigation through philosophical terminology.</strong></span>
+            </div>
+            <div class="project-links">
+                <a href="https://varun987-a11.github.io/Vedic-Wisdom" target="_blank" class="link-view">Click to View</a>
+                <a href="https://github.com/varun987-a11/Vedic-Wisdom" target="_blank" class="link-repo">GitHub Repo</a>
+            </div>
+        </li>
 
-  <li>
-    <strong>DoctorAppointmentScheduler:</strong> 
-    A DBMS-based PHP web app for booking doctor appointments |
-    <a href="https://github.com/Varun987-a11/DoctorAppointmentScheduler" target="_blank">GitHub Repo</a>
-  </li>
+        <li class="project-item">
+            <div class="project-header">
+                <bold>Noisescope:</bold> 
+                <span class="project-desc">Crowdsourced Noise Mapping Application. <strong>This application aims to provide real-time spatial data on noise pollution by collecting user submissions, processing geographical coordinates, and displaying results on an interactive map interface.</strong></span>
+            </div>
+            <div clboldass="project-links">
+                <a href="https://varun987-a11.github.io/NoiseScope" target="_blank" class="link-view">To View Preview</a>
+                <a href="https://github.com/Varun987-a11/NoiseScope" target="_blank" class="link-repo">GitHub Repo</a>
+            </div>
+        </li>
 
-  <li>
-    <strong>DisasterLink:</strong> 
-    Emergency Help & Resource Locator |
-    <a href="https://github.com/Varun987-a11/DisasterLink" target="_blank">GitHub Repo</a>
-  </li>
+        <li class="project-item">
+            <div class="project-header">
+                <bold>DoctorAppointmentScheduler:</bold> 
+                <span class="project-desc">A DBMS-based PHP web app for booking doctor appointments. <strong>It features separate interfaces for patients and doctors, managing appointment availability, patient records, and secure login using a robust MySQL database backend.</strong></span>
+            </div>
+            <div class="project-links">
+                <a href="https://github.com/Varun987-a11/DoctorAppointmentScheduler" target="_blank" class="link-repo">GitHub Repo</a>
+            </div>
+        </li>
 
-  <li>
-    <strong>Canteenly:</strong> 
-    Smart Web-Based Canteen Food Ordering System <i>(in progress)</i> |
-    <a href="https://github.com/Varun987-a11/Canteenly" target="_blank">GitHub Repo</a>
-  </li>
-</ul>
+        <li class="project-item">
+            <div class="project-header">
+                <bold>DisasterLink:</bold> 
+                <span class="project-desc">Emergency Help & Resource Locator. <strong>A critical resource platform designed to connect users with nearby emergency services, volunteer groups, and essential supplies during a crisis using location-based filtering.</strong></span>
+            </div>
+            <div class="project-links">
+                <a href="https://github.com/Varun987-a11/DisasterLink" target="_blank" class="link-repo">GitHub Repo</a>
+            </div>
+        </li>
 
-    </section>
+        <li class="project-item">
+            <div class="project-header">
+                <bold>Canteenly:</bold> 
+                <span class="project-desc">Smart Web-Based Canteen Food Ordering System <i>(in progress)</i>. <strong>This system integrates a full ordering pipeline, from menu management and shopping cart functionality to payment integration and order tracking for efficient service.</strong></span>
+            </div>
+            <div class="project-links">
+                <a href="https://github.com/Varun987-a11/Canteenly" target="_blank" class="link-repo">GitHub Repo</a>
+            </div>
+        </li>
+
+    </ul>
+</section>
 
     <section>
       <h2>Experience & Summary</h2>
