Reorganized project directory and added new files

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
                 <bold>Noisescope:</bold> 
                 <span class="project-desc">Crowdsourced Noise Mapping Application. <strong>This application aims to provide real-time spatial data on noise pollution by collecting user submissions, processing geographical coordinates, and displaying results on an interactive map interface.</strong></span>
             </div>
-            <div clboldass="project-links">
+            <div class="project-links">
                 <a href="https://varun987-a11.github.io/NoiseScope" target="_blank" class="link-view">To View Preview</a>
                 <a href="https://github.com/Varun987-a11/NoiseScope" target="_blank" class="link-repo">GitHub Repo</a>
             </div>
